# Claw

./: CMakeLists.txt  deploy.sh
agentInteraction/: CanvasStateClient.cs  CanvasStateClient.cs.txt  MyNuiApp.cs  MyNuiApp.cs.txt  TizenClawRawClient.cs  TizenClawRawClient.cs.txt
cmake/Modules/: ApplyPkgConfig.cmake
data/config/: agent_modes.json  agent_roles.json  mcp_servers.json  memory_config.json
scripts/: generate_gmail_token.py
src/tizenclaw/channel/: a2a_client.cc  a2a_client.hh  mcp_client_manager.cc  mcp_client_manager.hh  mcp_http_client.cc  mcp_http_client.hh  web_dashboard.cc  web_dashboard.hh
src/tizenclaw/core/: a2ui_agent.cc  a2ui_agent.hh  agent_core.cc  agent_core.hh  swarm_manager.cc  swarm_manager.hh  tizenclaw.cc  tool_declaration_builder.cc
src/tizenclaw/infra/: canvas_ipc_server.cc  canvas_ipc_server.hh
tools/cli/: CMakeLists.txt  instagram_client.py
tools/cli/tizen-google-workspace-cli/: CMakeLists.txt  http_client.hh  main.cc  tool.md  workspace_controller.cc  workspace_controller.hh
tools/cli/tizen-instagram-cli/: CMakeLists.txt  instagram_controller.cc  instagram_controller.hh  main.cc  mcp_client.cc  mcp_client.hh  tool.md
tools/cli/tizen-network-info-cli/: wifi_controller.hh
tools/cli/tizen-swarm-delegate-cli/: CMakeLists.txt  http_client.cc  http_client.hh  main.cc  swarm_delegate.cc  swarm_delegate.hh  tool.md
tools/embedded/: create_workflow.md  delete_workflow.md  list_workflows.md  run_workflow.md
