AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}
  SRCS)

ADD_EXECUTABLE(${TARGET_TIZEN_GOOGLE_WORKSPACE_CLI}
  ${SRCS})

SET_TARGET_PROPERTIES(
  ${TARGET_TIZEN_GOOGLE_WORKSPACE_CLI}
  PROPERTIES COMPILE_FLAGS "-fPIE")
SET_TARGET_PROPERTIES(
  ${TARGET_TIZEN_GOOGLE_WORKSPACE_CLI}
  PROPERTIES LINK_FLAGS "-pie")

APPLY_PKG_CONFIG(
  ${TARGET_TIZEN_GOOGLE_WORKSPACE_CLI} PUBLIC
  LIBCURL_DEPS
  DLOG_DEPS
)

SET(INSTALL_DIR
  "/opt/usr/share/tizen-tools/cli/${TARGET_TIZEN_GOOGLE_WORKSPACE_CLI}")

INSTALL(TARGETS ${TARGET_TIZEN_GOOGLE_WORKSPACE_CLI}
  DESTINATION ${INSTALL_DIR})
INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/tool.md"
  DESTINATION ${INSTALL_DIR})
